--- a/de.html
+++ b/de.html
@@ -551,7 +551,7 @@
         vorangetrieben, mit <strong><span class="no_of_papers"></span> veröffentlichten Artikeln</strong> und
         <strong><span class="no_of_patents"></span> erteilten Patenten</strong>.
         Neben seinen
-        ingenieurtechnischen Aktivitäten hat Dr. Xu
+        ingenieurtechnischen Aktivitäten hat er
         mit renommierten Organisationen, insbesondere dem St. Gallen Symposium, dem Salzburg Global Seminar, CITIC
         Securities
         und dem Oxford Institute for Energy Studies, zusammengearbeitet und sich auf die Analyse von sauberen
