--- a/en.html
+++ b/en.html
@@ -525,7 +525,7 @@
         industries with <strong><span class="no_of_papers"></span> papers</strong> published and <strong><span
             class="no_of_patents"></span>
           patents</strong> granted. Alongside his
-        engineering pursuits, Dr. Xu has
+        engineering pursuits, he has
         engaged with renowned organizations, notably St. Gallen Symposium, Salzburg Global Seminar, CITIC Securities,
         and Oxford Institute for Energy Studies, focusing on Clean <strong>Energy Economics and Policy</strong> analysis
         in Asia and
