--- a/es.html
+++ b/es.html
@@ -558,7 +558,7 @@
         con <strong><span class="no_of_papers"></span> artículos</strong> publicados y <strong><span
             class="no_of_patents"></span>
           patentes</strong> concedidas. Junto a sus
-        actividades de ingeniería, el Dr. Xu ha
+        actividades de ingeniería, él ha
         colaborado con organizaciones reconocidas, incluyendo el St. Gallen Symposium, el Salzburg Global Seminar, CITIC
         Securities,
         y el Oxford Institute for Energy Studies, centrando su atención en el análisis de la <strong>economía de la
