--- a/it.html
+++ b/it.html
@@ -588,12 +588,12 @@
         con <strong><span class="no_of_papers"></span> articoli</strong> pubblicati e <strong><span
             class="no_of_patents"></span>
           brevetti</strong> concessi. Insieme alle sue
-        attività ingegneristiche, il Dott. Xu ha
-        collaborato con organizzazioni rinomate, in particolare il St. Gallen Symposium, il Salzburg Global Seminar,
+        attività ingegneristiche, egli ha
+        collaborato con organizzazioni rinomate, in particolare con il St. Gallen Symposium, il Salzburg Global Seminar,
         CITIC Securities,
-        e l'Oxford Institute for Energy Studies, concentrandosi sull'analisi delle <strong>Economia e Politiche
+        e l'Oxford Institute for Energy Studies, concentrandosi sull'analisi dell'<strong>Economia e Politiche
           Energetiche Pulite</strong>
-        in Asia e
+        in Asia ed
         Europa. Come contributore attivo allo sviluppo internazionale, il Dott. Xu ha servito come Membro del Gruppo di
         Esperti (GE)
         presso
