--- a/kr.html
+++ b/kr.html
@@ -577,7 +577,7 @@
         <strong><a href="https://unece.org/" target="_blank">유엔 유럽 경제 위원회</a></strong> (UNECE) 에서 전문가 그룹 (GE) 위원으로
         활동했으며,
         <strong><a href="https://unfccc.int/" target="_blank">유엔 기후 변화 회의</a></strong> (UNFCCC) 에서 병행 세션을 주재하며
-        <strong><a href="https://sdgs.un.org/goals" target="_blank">UN 지속 가능한 개발 목표</a></strong> (SDGs) <strong>7
+        <strong><a href="https://sdgs.un.org/goals" target="_blank">유엔 지속 가능한 개발 목표</a></strong> (SDGs) <strong>7
         </strong>(저렴한 에너지), <strong>9 </strong>(산업 혁신),
         및 <strong>13 </strong>(기후 행동)을 옹호했습니다.
 
