--- a/fr.html
+++ b/fr.html
@@ -591,7 +591,7 @@
         avec <strong><span class="no_of_papers"></span> articles</strong> publiés et <strong><span
             class="no_of_patents"></span>
           brevets</strong> accordés. En parallèle de ses
-        activités d'ingénierie, le Dr. Xu a
+        activités d'ingénierie, il a
         collaboré avec des organisations renommées, notamment le St. Gallen Symposium, le Salzburg Global Seminar, CITIC
         Securities,
         et l'Oxford Institute for Energy Studies, se concentrant sur l'analyse de l'économie de <strong>l'Énergie Propre
