--- a/de.html
+++ b/de.html
@@ -552,9 +552,9 @@
         <strong><span class="no_of_patents"></span> erteilten Patenten</strong>.
         Neben seinen
         ingenieurtechnischen Aktivitäten hat er
-        mit renommierten Organisationen, insbesondere dem St. Gallen Symposium, dem Salzburg Global Seminar, CITIC
-        Securities
-        und dem Oxford Institute for Energy Studies, zusammengearbeitet und sich auf die Analyse von sauberen
+        mit renommierten Organisationen, insbesondere dem Sankt Gallen Symposium, dem Salzburger Globales Seminar, CITIC
+        Wertpapier
+        und dem Oxford Institut für Energiestudien, zusammengearbeitet und sich auf die Analyse von sauberen
         <strong>Energieökonomien
           und -politiken</strong> in Asien und
         Europa konzentriert. Als proaktiver Beitragender zur internationalen Entwicklung hat Dr. Xu als Mitglied der
