--- a/es-contact.html
+++ b/es-contact.html
@@ -415,8 +415,8 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">¡Hola, qué alegría! <small><small> <small>Bienvenidos amigos de <span
-                id="location">mundo</span> :-)</small></small> </small>
+      <h3 class="hidden-mobile">¡Hola y bienvenidos! <small><small> <small>Amigos de <span id="location">mundo</span>
+              :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_es.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ar.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
