--- a/es.html
+++ b/es.html
@@ -420,8 +420,8 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">¡Hola, qué alegría! <small><small> <small>Bienvenidos amigos de <span
-                id="location">mundo</span> :-)</small></small> </small>
+      <h3 class="hidden-mobile">¡Hola y bienvenidos! <small><small> <small>Amigos de <span id="location">mundo</span>
+              :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_es.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ar.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -559,9 +559,9 @@
             class="no_of_patents"></span>
           patentes</strong> concedidas. Junto a sus
         actividades de ingeniería, él ha
-        colaborado con organizaciones reconocidas, incluyendo el St. Gallen Symposium, el Salzburg Global Seminar, CITIC
-        Securities,
-        y el Oxford Institute for Energy Studies, centrando su atención en el análisis de la <strong>economía de la
+        colaborado con organizaciones reconocidas, incluyendo el Simposio de San Galo, el Seminario Global de Salzburgo,
+        CITIC Valores Mobiliarios y el Instituto de Oxford para Estudios Energéticos, centrando su atención en el
+        análisis de la <strong>economía de la
           energía limpia
           y la política</strong>
         en Asia y
@@ -587,7 +587,7 @@
             target="_blank">Infineon</a></strong> en
         Alemania. Su pasión por la investigación impactante lo ha llevado a un compromiso a largo plazo con líderes de
         la industria en
-        hidrógeno y pilas de hidrógeno, incluyendo <strong>Toyota Motor</strong> en Japón y el <strong>Grupo
+        hidrógeno y pilas de hidrógeno, incluyendo <strong>Corporación Toyota</strong> en Japón y el <strong>Grupo
           Freudenberg</strong>
         en Alemania. En busca de horizontes interdisciplinares, obtuvo un <strong>MBA</strong> en la <strong><a
             href="https://quantic.edu/mba" target="_blank">Escuela de Negocios Cuántica</a></strong> con formación
