--- a/fr.html
+++ b/fr.html
@@ -592,9 +592,12 @@
             class="no_of_patents"></span>
           brevets</strong> accordés. En parallèle de ses
         activités d'ingénierie, il a
-        collaboré avec des organisations renommées, notamment le St. Gallen Symposium, le Salzburg Global Seminar, CITIC
-        Securities,
-        et l'Oxford Institute for Energy Studies, se concentrant sur l'analyse de l'économie de <strong>l'Énergie Propre
+        collaboré avec des organisations renommées, notamment le Symposium de Saint-Gall, le Séminaire mondial de
+        Salzbourg,
+        CITIC
+        Valeurs mobilières,
+        et l'Institut d'Oxford pour les études énergétiques, se concentrant sur l'analyse de l'économie de
+        <strong>l'Énergie Propre
           et de la Politique</strong>
         en Asie et
         en Europe. En tant que contributeur proactif au développement international, le Dr. Xu a été membre du Groupe
