--- a/it.html
+++ b/it.html
@@ -589,9 +589,9 @@
             class="no_of_patents"></span>
           brevetti</strong> concessi. Insieme alle sue
         attività ingegneristiche, egli ha
-        collaborato con organizzazioni rinomate, in particolare con il St. Gallen Symposium, il Salzburg Global Seminar,
-        CITIC Securities,
-        e l'Oxford Institute for Energy Studies, concentrandosi sull'analisi dell'<strong>Economia e Politiche
+        collaborato con organizzazioni rinomate, in particolare con il Simposio di San Gallo, il Seminario Globale di
+        Salisburgo, CITIC valori mobiliari e l'Istituto di Oxford per gli Studi Energetici, concentrandosi sull'analisi
+        dell'<strong>Economia e Politiche
           Energetiche Pulite</strong>
         in Asia ed
         Europa. Come contributore attivo allo sviluppo internazionale, il Dott. Xu ha servito come Membro del Gruppo di
