--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <!-- block save as
       ================================================== -->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     window.onload = function () {
       document.onkeydown = function () {
         var e = window.event || arguments[0];
@@ -126,12 +126,14 @@
         return false;
       }
     }
-  </script>
-
-  <script src="js/language.js"></script>
+  </script> -->
 
 
-  <nav class="display-mobile">
+
+  <!-- <script src="js/language.js"></script> -->
+
+
+  <!-- <nav class="display-mobile">
 
     <div class='nav-container'>
       <div>
@@ -191,11 +193,15 @@
 
 
     </div>
-  </nav>
+  </nav> -->
 
 </head>
 
 <body>
+
+  <script type='text/javascript' id='clustrmaps'
+    src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=600&t=tt&d=mRcRGOHfI5m_4z362zL1K5jsQpgs-UcWLE04KRcma18&co=60a9db&ct=ffffff&cmo=303aea&cmn=fc8823'></script>
+
 
   <div id="extracted-content"></div>
 
