--- a/tb.html
+++ b/tb.html
@@ -52,17 +52,17 @@
 
   <style>
     .mongolian {
-        /* 设置文本方向为从左向右的竖排 */
-        writing-mode: vertical-lr;
+      /* 设置文本方向为从左向右的竖排 */
+      writing-mode: vertical-lr;
 
-        /* 蒙古文通常使用的字体，需要确保用户系统中安装了这些字体 */
-        /*font-family: 'Mongolian Baiti', 'Menk Qagan Tig', 'Menksoft Qagan';*/
+      /* 蒙古文通常使用的字体，需要确保用户系统中安装了这些字体 */
+      /*font-family: 'Mongolian Baiti', 'Menk Qagan Tig', 'Menksoft Qagan';*/
 
-        /* 根据需要调整其他样式 */
-        font-size: 12px;
-        line-height: 2.2;
+      /* 根据需要调整其他样式 */
+      font-size: 12px;
+      line-height: 2.2;
     }
-</style>
+  </style>
 
   <script type="text/javascript">
     function getIP(json) {
@@ -134,7 +134,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img class="hidden-mobile" src="images/hong8.png" width="155" />
+          <img class="hidden-mobile" src="images/banner_cns3_left.gif" width="155" />
           <h3 class="hidden-mobile" align="left">ཞུས་ཧུང་། </br><small>འབུམ་རམས་པ་</small>
           </h3>
           <!-- <h3 class="hidden-mobile" align="left">徐 泓 <small>博 士</small></h3>-->
@@ -176,8 +176,8 @@
     <!-- Content -->
     <div class="twelve columns offset-by-four content">
 
-      <img class="hidden-mobile" src="images/banner_cns3.png" width="800" />
-      <img class="display-mobile" src="images/banner_mobile_cn3.png" width="800" />
+      <img class="hidden-mobile" src="images/banner_cns3.gif" width="800" />
+      <img class="display-mobile" src="images/banner_mobile_cn3.gif" width="800" />
 
 
       <p class="hidden-mobile"></p>
@@ -266,27 +266,33 @@
 
       <p align="justify">
 
-        <div class="mongolian">
-          ᠣᠳᠣᠬᠠᠨ ᠳᠤ ᠂ ᠰᠢᠸᠶ ᠬᠤᠸᠠ ᠳ᠋ᠣᠺᠲ᠋ᠣᠷ </div>
+        <script type='text/javascript' id='clustrmaps'
+          src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=600&t=tt&d=mRcRGOHfI5m_4z362zL1K5jsQpgs-UcWLE04KRcma18&co=60a9db&ct=ffffff&cmo=303aea&cmn=fc8823'></script>
 
-          ᠣᠳᠣᠬᠠᠨ ᠳᠤ ᠂ ᠰᠢᠸᠶ ᠬᠤᠸᠠ ᠳ᠋ᠣᠺᠲ᠋ᠣᠷ ᠭᠧᠷᠮᠠᠨ ᠤ ᠠᠵᠤ ᠦᠢᠯᠡᠳᠪᠦᠷᠢ ᠶᠢᠨ ᠬᠢᠨ ᠳᠦ ᠰᠢᠨ᠎ᠡ ᠡᠨᠧᠷᠭᠢ ᠶᠢᠨ ᠬᠥᠳᠡᠯᠭᠡᠭᠴᠢ ᠬᠦᠴᠦᠨ ᠦ ᠰᠢᠰᠲ᠋ᠧᠮ ᠦᠨ ᠲᠤᠰᠬᠠᠶ ᠮᠡᠷᠭᠡᠵᠢᠯᠲᠡᠨ ᠦ ᠢᠨᠵᠧᠨᠧᠷ ᠪᠣᠯᠵᠤ ᠂ ᠡᠨᠧᠷᠭᠢ ᠪᠣᠯᠣᠨ ᠵᠠᠮ ᠬᠠᠷᠢᠯᠴᠠᠭᠠᠨ ᠤ ᠬᠦᠷᠢᠶᠡᠨ ᠳᠡᠬᠢ ᠨᠡᠭᠦᠷᠡᠰᠦᠲᠥ᠋ᠷᠥᠭᠴᠢ ᠶᠢᠨ ᠳᠤᠮᠳᠠ ᠡᠶ᠎ᠡ ᠨᠠᠶᠢᠷᠠᠮᠳᠠᠭᠤ ᠪᠠᠶᠢᠬᠤ ᠪᠠᠷ ᠴᠢᠷᠮᠠᠶᠢᠨ᠎ᠠ ᠃
+      <div class="mongolian">
+        ᠣᠳᠣᠬᠠᠨ ᠳᠤ ᠂ ᠰᠢᠸᠶ ᠬᠤᠸᠠ ᠳ᠋ᠣᠺᠲ᠋ᠣᠷ </div>
+
+      ᠣᠳᠣᠬᠠᠨ ᠳᠤ ᠂ ᠰᠢᠸᠶ ᠬᠤᠸᠠ ᠳ᠋ᠣᠺᠲ᠋ᠣᠷ ᠭᠧᠷᠮᠠᠨ ᠤ ᠠᠵᠤ ᠦᠢᠯᠡᠳᠪᠦᠷᠢ ᠶᠢᠨ ᠬᠢᠨ ᠳᠦ ᠰᠢᠨ᠎ᠡ ᠡᠨᠧᠷᠭᠢ ᠶᠢᠨ ᠬᠥᠳᠡᠯᠭᠡᠭᠴᠢ ᠬᠦᠴᠦᠨ ᠦ ᠰᠢᠰᠲ᠋ᠧᠮ ᠦᠨ
+      ᠲᠤᠰᠬᠠᠶ ᠮᠡᠷᠭᠡᠵᠢᠯᠲᠡᠨ ᠦ ᠢᠨᠵᠧᠨᠧᠷ ᠪᠣᠯᠵᠤ ᠂ ᠡᠨᠧᠷᠭᠢ ᠪᠣᠯᠣᠨ ᠵᠠᠮ ᠬᠠᠷᠢᠯᠴᠠᠭᠠᠨ ᠤ ᠬᠦᠷᠢᠶᠡᠨ ᠳᠡᠬᠢ ᠨᠡᠭᠦᠷᠡᠰᠦᠲᠥ᠋ᠷᠥᠭᠴᠢ ᠶᠢᠨ ᠳᠤᠮᠳᠠ ᠡᠶ᠎ᠡ
+      ᠨᠠᠶᠢᠷᠠᠮᠳᠠᠭᠤ ᠪᠠᠶᠢᠬᠤ ᠪᠠᠷ ᠴᠢᠷᠮᠠᠶᠢᠨ᠎ᠠ ᠃
 
       </br>
 
-      朩湔，俆泓博仕茬犇珒能羱妍究葰泹姙汸問敩鍺，抟炷纡狆瓯氢能戰畧玙經哜妍究，臸劦纡實哯能羱玙茭嗵領域湠狆啝。嶒茬聅匼國菠慁氣糇變囮汏浍炷歭“狆國能羱啭侀玙技朮創噺”炷趧哋汾浍，傪玙聅匼國瓯詶經哜逶園浍禸陸茭嗵玙氣糇變囮抟傢蒩浍议。糼渎敩莅剘簡玙嗨迯佱鄴彶狆瓯敩朮僟媾匼莋潑錶①莋啝珙哃莋鍺囵妏10悇萹，並镬嘚哆頙抟悡涭權。哃溡彵還泹姙哆頙能羱啝茭嗵領域滈吲剘刋哋谉鎬亾, 姒彶聖咖仑國漈經哜囵墵哋敩朮评谉。嶒镬嘚羙國電囮敩敩浍囵妏撽埥彶膂垳奨、渶特尒笾緣AI奨敩唫、瓯擝吚菈凘謨奨敩唫等。
+      朩湔，俆泓博仕茬犇珒能羱妍究葰泹姙汸問敩鍺，抟炷纡狆瓯氢能戰畧玙經哜妍究，臸劦纡實哯能羱玙茭嗵領域湠狆啝。嶒茬聅匼國菠慁氣糇變囮汏浍炷歭“狆國能羱啭侀玙技朮創噺”炷趧哋汾浍，傪玙聅匼國瓯詶經哜逶園浍禸陸茭嗵玙氣糇變囮抟傢蒩浍议。糼渎敩莅剘簡玙嗨迯佱鄴彶狆瓯敩朮僟媾匼莋潑錶①莋啝珙哃莋鍺囵妏10悇萹，並镬嘚哆頙抟悡涭權。哃溡彵還泹姙哆頙能羱啝茭嗵領域滈吲剘刋哋谉鎬亾,
+      姒彶聖咖仑國漈經哜囵墵哋敩朮评谉。嶒镬嘚羙國電囮敩敩浍囵妏撽埥彶膂垳奨、渶特尒笾緣AI奨敩唫、瓯擝吚菈凘謨奨敩唫等。
 
 
 
 
-        འཛམ་གླིང་ས་གནས་ཁག་ནས་ཕེབས་པའི་གྲོགས་པོ་རྣམས་ལ་དགའ་བསུ་ཞུ། :-)</br>
+      འཛམ་གླིང་ས་གནས་ཁག་ནས་ཕེབས་པའི་གྲོགས་པོ་རྣམས་ལ་དགའ་བསུ་ཞུ། :-)</br>
       </br>
-        མིག་སྔར་འབུམ་རམས་པ་ཞུས་ཧུང་གིས་འཇར་མན་གྱི་མུའུ་ཉི་ཧེ་རླངས་འཁོར་ལས་རིགས་སུ་ཞིབ་འཇུག་གསར་སྤེལ་བཟོ་སྐྲུན་པའི་འགན་འཁུར་གྱ་ཡོད།ཁོང་གི་སྣོལ་མའི་ཁྱབ་ཁོངས་སུ་ཞིབ་འཇུག་གི་སྤྲོ་བ་དེ་ནུས་ཁུངས་གསར་པ་དང་།རྒྱུན་མཐུད་འཕེལ་རྒྱས།བྱེད་ནུས་རྒྱུ་ཆ།རྩིས་འཁོར་བརྙན་གྲུབ་དང་མཐོང་ནུས།ཚོང་ལས་དབྱེ་ཞིབ་སོགས་སུ་འདུས་ཡོད།སློབ་གནས་སློབ་སྦྱོང་བྱེད་རིང་རྒྱལ་ཁབ་ཕྱི་ནང་གི་ཁེ་ལས་དང་དེ་བཞིན་རིག་གཞུང་སྒྲིག་གཞི་དང་མཉམ་ལས་བྱས་ནས་རྩོམ་ཞིག་དང་ཐུན་མོང་ཐོག་རྩོམ་པ་པོའི་དཔྱད་རྩོམ་10ལྷག་ཙམ་སྤེལ་བ་དང་འབྲེལ་ཀྲུང་གོའི་ཁེ་བེད་བདག་ཐོབ་ཀྱི་དབང་ཆ་ཁག་3ཐོབ་ཡོད་པ་རེད།དེ་སྔ་ཨ་རིའི་ECSཚོགས་འདུའི་ཡུལ་སྐོར་བྱ་དགའ་དང་།ཡོ་རོབ་མནའ་འབྲེལ་དབྱི་ལ་སི་མོའི་སྦྱངས་འབྲས་ལེགས་ཐོན་གྱི་བྱ་དགའ་དང་དངོས་གཞིའི་ཚན་ཁག་གི་སློབ་མའི་གསར་གཏོད་སྦྱངས་འབྲས་ལེགས་ཐོན་གྱི་བྱ་དགའ་ཐོབ་མྱོང་ཡོད།</br></br>
+      མིག་སྔར་འབུམ་རམས་པ་ཞུས་ཧུང་གིས་འཇར་མན་གྱི་མུའུ་ཉི་ཧེ་རླངས་འཁོར་ལས་རིགས་སུ་ཞིབ་འཇུག་གསར་སྤེལ་བཟོ་སྐྲུན་པའི་འགན་འཁུར་གྱ་ཡོད།ཁོང་གི་སྣོལ་མའི་ཁྱབ་ཁོངས་སུ་ཞིབ་འཇུག་གི་སྤྲོ་བ་དེ་ནུས་ཁུངས་གསར་པ་དང་།རྒྱུན་མཐུད་འཕེལ་རྒྱས།བྱེད་ནུས་རྒྱུ་ཆ།རྩིས་འཁོར་བརྙན་གྲུབ་དང་མཐོང་ནུས།ཚོང་ལས་དབྱེ་ཞིབ་སོགས་སུ་འདུས་ཡོད།སློབ་གནས་སློབ་སྦྱོང་བྱེད་རིང་རྒྱལ་ཁབ་ཕྱི་ནང་གི་ཁེ་ལས་དང་དེ་བཞིན་རིག་གཞུང་སྒྲིག་གཞི་དང་མཉམ་ལས་བྱས་ནས་རྩོམ་ཞིག་དང་ཐུན་མོང་ཐོག་རྩོམ་པ་པོའི་དཔྱད་རྩོམ་10ལྷག་ཙམ་སྤེལ་བ་དང་འབྲེལ་ཀྲུང་གོའི་ཁེ་བེད་བདག་ཐོབ་ཀྱི་དབང་ཆ་ཁག་3ཐོབ་ཡོད་པ་རེད།དེ་སྔ་ཨ་རིའི་ECSཚོགས་འདུའི་ཡུལ་སྐོར་བྱ་དགའ་དང་།ཡོ་རོབ་མནའ་འབྲེལ་དབྱི་ལ་སི་མོའི་སྦྱངས་འབྲས་ལེགས་ཐོན་གྱི་བྱ་དགའ་དང་དངོས་གཞིའི་ཚན་ཁག་གི་སློབ་མའི་གསར་གཏོད་སྦྱངས་འབྲས་ལེགས་ཐོན་གྱི་བྱ་དགའ་ཐོབ་མྱོང་ཡོད།</br></br>
 
-        2021ལོའི་ལོ་འགོར་ཁོང་ལ་སུའུ་ལི་ཧྲེ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རང་བྱུང་རིག་པ་དང་བཟོ་སྐྲུན་རིག་པའི་སློབ་ཆེན་གྱི་ཚན་རིག་འབུམ་རམས་པའི་སློབ་གནས་ཐོབ་པ་དང་།འབུམ་རམས་པའི་སྐབས་སུའེ་ཙེར་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་ཞིབ་འཇུག་ཁངནུས་རྒྱུ་དང་ཁོར་ཡུག་པུས་ཐཱན་ཁྲོད་དང་/ནུས་རྒྱུ་གསར་པའི་ལག་རྩལ་ཞིབ་འཇུག་ལ་གཞོལ་བ་དང་འབྲེལ་ལས་རིགས་གཅིག་པའི་སྣེ་འདྲེན་རླངས་འཁོར་ཁེ་ལས་དང་སུའེ་ཙེར་དང་མཉམ་དུ་འགྱེད་འཕྲོའི་འོད་ཁུངས་མཉམ་ལས་བྱས་ཏེ་ལོ་2རིང་གི་ཆིང་ནུས་རྒྱུ་རླངས་འཁོར་དང་དེ་བཞིན་སློབ་གྲྭ་དང་ཁེ་ལས་ཀྱི་ལག་རྩལ་གཞན་སྒྱུར་རྣམ་གྲངས་ཞིབ་འཇུག་བྱས་ཡོད།
-        2016ལོར་འཇར་མན་མུའུ་ཉི་ཧེ་བཟོ་ལས་སློབ་ཆེན་གྱི་དཔྱད་གཞིའི་རིག་པའི་རབ་འབྱམས་པའི་སློབ་གནས་ཐོབ་པ་དང་དེའི་རིང་ཧྥ་རན་སེ་ལེ་ཨེན་སློབ་ཆེན་དང་པོར་སྤེལ་རེས་སློབ་སྦྱོང་བྱས་པར་དངོས་ཁམས་རིག་པའི་རབ་འབྱམས་པའི་སློབ་གནས་ཐོབ་པ་མ་ཟད།འཇར་མན་གྱི་དབྱིན་ཧྥེ་ལིང་གློག་འདྲེན་ཕྱེད་གཟུགས་ཚན་རྩལ་སྤྱི་ཁྱབ་པུའུ་དང་ཡོ་རོབ་མནའ་འབྲེལ་རང་མོས་གློག་རྡུལ་སྐུལ་འོད་ཚད་ཡོད་ཀུང་སིར་ལས་རིགས་གཅིག་པའི་དངོས་སྦྱོང་ཉམས་མྱོང་གསོག་འཇོག་ཀྱང་བྱས་པ་རེད།
-        རབ་འབྱམས་པའི་དུས་སུ་ཀྲུང་ཧྥའི་སྒྲོམ་གཞིའི་འོག་གི་ཧྥ་རན་སེའི་ལུའུ་ཆའོ་སློབ་ཆེན་དང་ཐེན་ཅིན་ཧའེ་ཧོ་ཨུ་ཡོན་ལྷན་ཁང་གིས་ཐུན་མོང་ཐོག་མཉམ་ལས་བྱེད་པའི་ཁོར་ཡུག་ལག་རྩལ་གསོ་སྦྱོང་གི་འགན་འཁུར་མྱོང་ཡོད།
-        ལོ་16ལ་སླེབས་སྐབས་པེ་ཅིང་འགྲིམ་འགྲུལ་སློབ་ཆེན་གྱི་སློབ་སྦྱོང་རྒྱུ་ཆ་རིག་པའི་ནང་ཚུད་པ་དང་2013ལོར་གནས་ལུགས་རིག་པའི་ཤེས་རམས་པའི་སློབ་གནས་ཐོབ་པ་དང་།དངོས་གཞིའི་ཚན་ཁག་རིང་པེ་ཅིང་གྲོང་ཁྱེར་གྱི་གསར་གཏོད་ཚོད་ལྟའི་རྣམ་གྲངས་ཀྱི་སྣེ་ཁྲིད་དེ་ཐའེ་པེ་རུ་རྒྱལ་སྤྱིའི་ལྗང་མདོག་ནུས་རྒྱུའི་འགྲན་བསྡུར་ནང་ཞུགས་རྒྱུའི་གདན་ཞུ་བྱས་པ་དང་འབྲེལ“འགྲན་སློང་བུམ་པའི”ཚོང་ལས་འགྲན་བསྡུར་གྱི་རྒྱལ་ཁབ་རིམ་པའི་ཟངས་ཀྱི་བྱ་དགའ་ཐོབ་པ་རེད།
-        གཞན་ཡང་རིག་གཞུང་ཞིབ་འཇུག་དང་ཆབས་ཅིག་ཨ་རིའི་ཚད་འབེབས་ཚོང་ལས་སློབ་གླིང་གིས་རྒྱང་ཁྲིད་སློབ་སྦྱོང་བྱས་ནས་བཟོ་ཚོང་དོ་དམ་གྱི་རབ་འབྱམས་པའི(MBA)སློབ་གནས་ཐོབ་པ་མ་ཟད།མགོ་ཡི་དངུལ་འཛིན་ཞིབ་འཇུག་སུའུ(Aཀུའུ་）དང་ཨ་རིའི་ཀུའུ་）རུ་གཏིང་ཟབ་པའི་ལས་རིགས་ཞིབ་འཇུག་སྙན་ཞུ་དང་དེ་བཞིན་ཟུང་དངུལ་ལོར་ཐེབས་རྩའི（ས་བོན་འཁོར་གཞིའིA）ནུས་རྒྱུ་གསར་པའི་ལམ་བུའི་འགྲན་སྲོལ་གྱི་རྨང་གཞིའི་སྒྲིག་བཀོད་མ་འཇོག་དངོས་སྦྱོང་ཡང་བྱེད་མྱོང་ཡོད་པ་རེད།
+      2021ལོའི་ལོ་འགོར་ཁོང་ལ་སུའུ་ལི་ཧྲེ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རང་བྱུང་རིག་པ་དང་བཟོ་སྐྲུན་རིག་པའི་སློབ་ཆེན་གྱི་ཚན་རིག་འབུམ་རམས་པའི་སློབ་གནས་ཐོབ་པ་དང་།འབུམ་རམས་པའི་སྐབས་སུའེ་ཙེར་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་ཞིབ་འཇུག་ཁངནུས་རྒྱུ་དང་ཁོར་ཡུག་པུས་ཐཱན་ཁྲོད་དང་/ནུས་རྒྱུ་གསར་པའི་ལག་རྩལ་ཞིབ་འཇུག་ལ་གཞོལ་བ་དང་འབྲེལ་ལས་རིགས་གཅིག་པའི་སྣེ་འདྲེན་རླངས་འཁོར་ཁེ་ལས་དང་སུའེ་ཙེར་དང་མཉམ་དུ་འགྱེད་འཕྲོའི་འོད་ཁུངས་མཉམ་ལས་བྱས་ཏེ་ལོ་2རིང་གི་ཆིང་ནུས་རྒྱུ་རླངས་འཁོར་དང་དེ་བཞིན་སློབ་གྲྭ་དང་ཁེ་ལས་ཀྱི་ལག་རྩལ་གཞན་སྒྱུར་རྣམ་གྲངས་ཞིབ་འཇུག་བྱས་ཡོད།
+      2016ལོར་འཇར་མན་མུའུ་ཉི་ཧེ་བཟོ་ལས་སློབ་ཆེན་གྱི་དཔྱད་གཞིའི་རིག་པའི་རབ་འབྱམས་པའི་སློབ་གནས་ཐོབ་པ་དང་དེའི་རིང་ཧྥ་རན་སེ་ལེ་ཨེན་སློབ་ཆེན་དང་པོར་སྤེལ་རེས་སློབ་སྦྱོང་བྱས་པར་དངོས་ཁམས་རིག་པའི་རབ་འབྱམས་པའི་སློབ་གནས་ཐོབ་པ་མ་ཟད།འཇར་མན་གྱི་དབྱིན་ཧྥེ་ལིང་གློག་འདྲེན་ཕྱེད་གཟུགས་ཚན་རྩལ་སྤྱི་ཁྱབ་པུའུ་དང་ཡོ་རོབ་མནའ་འབྲེལ་རང་མོས་གློག་རྡུལ་སྐུལ་འོད་ཚད་ཡོད་ཀུང་སིར་ལས་རིགས་གཅིག་པའི་དངོས་སྦྱོང་ཉམས་མྱོང་གསོག་འཇོག་ཀྱང་བྱས་པ་རེད།
+      རབ་འབྱམས་པའི་དུས་སུ་ཀྲུང་ཧྥའི་སྒྲོམ་གཞིའི་འོག་གི་ཧྥ་རན་སེའི་ལུའུ་ཆའོ་སློབ་ཆེན་དང་ཐེན་ཅིན་ཧའེ་ཧོ་ཨུ་ཡོན་ལྷན་ཁང་གིས་ཐུན་མོང་ཐོག་མཉམ་ལས་བྱེད་པའི་ཁོར་ཡུག་ལག་རྩལ་གསོ་སྦྱོང་གི་འགན་འཁུར་མྱོང་ཡོད།
+      ལོ་16ལ་སླེབས་སྐབས་པེ་ཅིང་འགྲིམ་འགྲུལ་སློབ་ཆེན་གྱི་སློབ་སྦྱོང་རྒྱུ་ཆ་རིག་པའི་ནང་ཚུད་པ་དང་2013ལོར་གནས་ལུགས་རིག་པའི་ཤེས་རམས་པའི་སློབ་གནས་ཐོབ་པ་དང་།དངོས་གཞིའི་ཚན་ཁག་རིང་པེ་ཅིང་གྲོང་ཁྱེར་གྱི་གསར་གཏོད་ཚོད་ལྟའི་རྣམ་གྲངས་ཀྱི་སྣེ་ཁྲིད་དེ་ཐའེ་པེ་རུ་རྒྱལ་སྤྱིའི་ལྗང་མདོག་ནུས་རྒྱུའི་འགྲན་བསྡུར་ནང་ཞུགས་རྒྱུའི་གདན་ཞུ་བྱས་པ་དང་འབྲེལ“འགྲན་སློང་བུམ་པའི”ཚོང་ལས་འགྲན་བསྡུར་གྱི་རྒྱལ་ཁབ་རིམ་པའི་ཟངས་ཀྱི་བྱ་དགའ་ཐོབ་པ་རེད།
+      གཞན་ཡང་རིག་གཞུང་ཞིབ་འཇུག་དང་ཆབས་ཅིག་ཨ་རིའི་ཚད་འབེབས་ཚོང་ལས་སློབ་གླིང་གིས་རྒྱང་ཁྲིད་སློབ་སྦྱོང་བྱས་ནས་བཟོ་ཚོང་དོ་དམ་གྱི་རབ་འབྱམས་པའི(MBA)སློབ་གནས་ཐོབ་པ་མ་ཟད།མགོ་ཡི་དངུལ་འཛིན་ཞིབ་འཇུག་སུའུ(Aཀུའུ་）དང་ཨ་རིའི་ཀུའུ་）རུ་གཏིང་ཟབ་པའི་ལས་རིགས་ཞིབ་འཇུག་སྙན་ཞུ་དང་དེ་བཞིན་ཟུང་དངུལ་ལོར་ཐེབས་རྩའི（ས་བོན་འཁོར་གཞིའིA）ནུས་རྒྱུ་གསར་པའི་ལམ་བུའི་འགྲན་སྲོལ་གྱི་རྨང་གཞིའི་སྒྲིག་བཀོད་མ་འཇོག་དངོས་སྦྱོང་ཡང་བྱེད་མྱོང་ཡོད་པ་རེད།
       </p>
       <!---
          <p class="display-mobile" style="text-align:left; padding: 0px; margin: 0px;">
