--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
 <html lang="en">
-<!--<![endif]-->
 
 <head>
 
@@ -21,13 +16,13 @@
 
   <!-- CSS
   ================================================== -->
-  <link rel="stylesheet" href="stylesheets/base.css">
+  <!-- <link rel="stylesheet" href="stylesheets/base.css">
   <link rel="stylesheet" href="stylesheets/skeleton.css">
   <link rel="stylesheet" href="stylesheets/layout.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/navi5.css">
   <link rel="stylesheet" href="stylesheets/navi6.css">
-  <link rel="stylesheet" href="stylesheets/type.css">
+  <link rel="stylesheet" href="stylesheets/type.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -50,26 +45,8 @@
   </script>
   -->
 
-  <style>
-    .video-container {
-      position: relative;
-      width: 100%;
-      height: 0;
-      padding-bottom: 56.25%;
-      /* This value is for a 16:9 aspect ratio. Adjust as needed for your video */
-      overflow: hidden;
-    }
 
-    .video-container video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-
-  <script type="module">
+  <!-- <script type="module">
     async function fetchCountries() {
       const response = await fetch('/js/countries.json');
       const countries = await response.json();
@@ -98,102 +75,7 @@
     }
 
     document.addEventListener('DOMContentLoaded', displayCountryName);
-  </script>
-
-  <!-- block save as
-      ================================================== -->
-  <!-- <script type="text/javascript">
-    window.onload = function () {
-      document.onkeydown = function () {
-        var e = window.event || arguments[0];
-        //屏蔽F12
-        if (e.keyCode == 123) {
-
-          return false;
-          //屏蔽Ctrl+Shift+I
-        } else if ((e.ctrlKey) && (e.shiftKey) && (e.keyCode == 73)) {
-
-          return false;
-          //屏蔽Shift+F10
-        } else if ((e.shiftKey) && (e.keyCode == 121)) {
-
-          return false;
-        }
-      };
-      //屏蔽右键单击
-      document.oncontextmenu = function () {
-
-        return false;
-      }
-    }
   </script> -->
-
-
-
-  <!-- <script src="js/language.js"></script> -->
-
-
-  <!-- <nav class="display-mobile">
-
-    <div class='nav-container'>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>H</span>
-          <span class='name'>Hong</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ed</span>
-          <span class='name'>Education</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>Re</span>
-          <span class='name'>Research</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb</span>
-          <span class='name'>Publication</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Ad</span>
-          <span class='name'>Awards</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#contact'>
-          <span class='element'>C</span>
-          <span class='name'>Contact</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em</span>
-          <span class='name'>Email</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc</span>
-          <span class='name'>Scholar</span>
-        </a>
-      </div>
-
-
-    </div>
-  </nav> -->
 
 </head>
 
@@ -204,7 +86,7 @@
 
   <div id="extracted-content"></div>
 
-  <script>
+  <!-- <script>
     // Function to load and extract content from another HTML file
     function extractContent() {
       // Replace 'source.html' with the path to the HTML file you want to extract content from
@@ -223,7 +105,7 @@
 
     // Call the extractContent function when the page loads
     window.addEventListener('load', extractContent);
-  </script>
+  </script> -->
 
 
 
