--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <body>
 
-  <script type='text/javascript' id='clustrmaps'
+  <script async type='text/javascript' id='clustrmaps'
     src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=600&t=tt&d=mRcRGOHfI5m_4z362zL1K5jsQpgs-UcWLE04KRcma18&co=60a9db&ct=ffffff&cmo=303aea&cmn=fc8823'></script>
 
   <!-- <div id="extracted-content"></div> -->
