--- a/cn.html
+++ b/cn.html
@@ -542,7 +542,7 @@
               href="https://unece.org/"
               target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论，积极倡导联合国可持续发展目标
           (SDGs) 第7项 (清洁能源), 第9项 (产业创新), 以及第13项 (气候行动)。同时他还担任10余本能源与交通领域高引期刊的<strong>审稿人</strong>,
-          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得奥地利<strong>萨尔茨堡国际研讨会</strong>旅行奖、<strong>美国电化学学会</strong>论文邀请及旅行奖、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
+          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得奥地利<strong>萨尔茨堡国际研讨会</strong>旅行奖、<strong>美国电化学学会论文邀请</strong>及旅行奖、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
         </p>
 
         <p align="justify">
@@ -982,47 +982,6 @@
     <script src="/js/navi-mobile.js"></script>
     <script src="/js/navi-sidebar.js"></script>
     <script type="text/javascript" src="update_info_script.js"></script>
-
-    <script type="text/javascript">
-      window.onload = function () {
-        // Block certain keyboard shortcuts
-        document.onkeydown = function (e) {
-          e = e || window.event;
-
-          // Block F12
-          if (e.keyCode == 123) {
-            return false;
-          }
-          // Block Ctrl+Shift+I
-          else if (e.ctrlKey && e.shiftKey && e.keyCode == 73) {
-            return false;
-          }
-          // Block Shift+F10
-          else if (e.shiftKey && e.keyCode == 121) {
-            return false;
-          }
-          // Block Ctrl+S (Save As)
-          else if (e.ctrlKey && e.keyCode == 83) {
-            e.preventDefault();
-            return false;
-          }
-          // Block Ctrl+C (Copy)
-          else if (e.ctrlKey && e.keyCode == 67) {
-            return false;
-          }
-        };
-
-        // Block right-click context menu
-        document.oncontextmenu = function () {
-          return false;
-        };
-
-        // Block text selection (Copy action)
-        document.onselectstart = function () {
-          return false;
-        };
-      };
-    </script>
 
 
     <!-- End Document
