--- a/de-1p.html
+++ b/de-1p.html
@@ -435,7 +435,7 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführung ⇨</small></a></strong><br>
             </li> 
             
             <li><a href="de-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Forschungsfortschritt</strong></span></small></a></li>
