--- a/de-research.html
+++ b/de-research.html
@@ -321,7 +321,7 @@
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="de.html"><span>Einführen</span></a></li>
+            <li><a href="de.html"><span>Einführung</span></a></li>
             <li><a href="de-research.html"><span style="color: rgb(253, 93, 7);">Forschung ⏴</span></a></li>
             <li><a href="#publications">• Publikationen</a></li>
             <li><a href="#patents">• Patente</a></li>
@@ -387,7 +387,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small
-                    style="color: rgb(44, 44, 44);">▸ Einführen
+                    style="color: rgb(44, 44, 44);">▸ Einführung
                   </small></a></strong><br>
             </li>
 
