--- a/de.html
+++ b/de.html
@@ -322,7 +322,7 @@
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="de.html"><span style="color: rgb(253, 93, 7);">Einführen ⏴</span></a></li>
+            <li><a href="de.html"><span style="color: rgb(253, 93, 7);">Einführung ⏴</span></a></li>
             <li><a href="de-research.html">Forschung</a></li>
             <li><a href="de-resume.html">Lebenslauf</a></li>
             <li><a href="de-activities.html">Aktivitäten</a></li>
@@ -453,7 +453,7 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführung
                     ★</small></a></strong><br>
             </li>
 
