--- a/de-activities.html
+++ b/de-activities.html
@@ -369,7 +369,7 @@
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
             <p>____</p>
-            <li><a href="de.html"><span>Einführen</span></a></li>
+            <li><a href="de.html"><span>Einführung</span></a></li>
             <li><a href="de-research.html">Forschung</a></li>
             <li><a href="de-resume.html">Lebenslauf</a></li>
             <li><a href="de-activities.html"><span style="color: rgb(253, 93, 7);">Aktivitäten ⏴</span></a></li>
@@ -438,7 +438,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small
-                    style="color: rgb(44, 44, 44);">▸ Einführen
+                    style="color: rgb(44, 44, 44);">▸ Einführung
                   </small></a></strong><br>
             </li>
 
