--- a/cn-research.html
+++ b/cn-research.html
@@ -1151,13 +1151,20 @@
                 </ul>
 
                 <ol>
+
                     <li>
                         <strong>H. Xu</strong>, 链接科技与社会: 不确定的未来, 重新构想的连接 <br>
                         Connecting Technologies: Uncertain Futures, Connections Reimagined<br>
                         <em>2024 | 韩国高等教育财团 - 萨尔茨堡全球研讨会</em>, 萨尔茨堡, 奥地利. <strong>[成员]</strong> [<a
                             href="https://www.salzburgglobal.org/" target="_blank">链接</a>]
                     </li>
-
+                    <li>
+                        <strong>H. Xu</strong>, 第20届萨尔茨堡欧洲峰会: 欧盟正在走向能源联盟？ <br>
+                        20th Salzburg Europe Summit: EU on the way into the Energy-Union?
+<br>
+                        <em>2024 | 欧洲区域研究所 (IRE)</em>, 萨尔茨堡, 奥地利. <strong>[参会]</strong> [<a
+                            href="https://www.salzburg-europe-summit.eu/en-gb" target="_blank">链接</a>]
+                    </li>
                     <li>
                         <strong>H. Xu</strong>, 联合国气候变化框架公约科学和技术咨询附属机构第六十届会议 <br>
                         Sixtieth session of the Subsidiary Body for Scientific and Technological Advice<br>
