--- a/ar-activities.html
+++ b/ar-activities.html
@@ -566,6 +566,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> النمسا،
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> بلجيكا،
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> البوسنة والهرسك،
+            <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> بلغاريا،  
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> كرواتيا،
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> جمهورية التشيك،
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> الدنمارك،
