--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1397,7 +1397,8 @@
             <img class="flag-icon" src="./images/wflags/al.png" alt="Albania"> 阿尔巴尼亚、
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> 奥地利、
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> 比利时、
-            <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> 波斯尼亚和黑塞哥维那、
+            <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> 波黑、
+            <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> 保加利亚、
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> 克罗地亚、
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> 捷克、
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> 丹麦、
