--- a/de-activities.html
+++ b/de-activities.html
@@ -604,6 +604,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Österreich"> Österreich,
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgien"> Belgien,
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnien und Herzegowina"> Bosnien und Herzegowina,
+            <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> Bulgarien,
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Kroatien"> Kroatien,
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Tschechien"> Tschechien,
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Dänemark"> Dänemark,
