--- a/en-activities.html
+++ b/en-activities.html
@@ -584,6 +584,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> Austria,
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> Belgium,
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> Bosnia and Herzegovina,
+            <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> Bulgaria,
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> Croatia,
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> Czech Republic,
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> Denmark,
