--- a/es-activities.html
+++ b/es-activities.html
@@ -604,6 +604,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> Austria,
             <img class="flag-icon" src="./images/wflags/be.png" alt="Bélgica"> Bélgica,
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia y Herzegovina"> Bosnia y Herzegovina,
+                        <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> Bulgaria,
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croacia"> Croacia,
             <img class="flag-icon" src="./images/wflags/cz.png" alt="República Checa"> República Checa,
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Dinamarca"> Dinamarca,
