--- a/fr-activities.html
+++ b/fr-activities.html
@@ -631,6 +631,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Autriche"> Autriche,
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgique"> Belgique,
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnie-Herzégovine"> Bosnie-Herzégovine,
+            <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> Bulgarie,
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatie"> Croatie,
             <img class="flag-icon" src="./images/wflags/cz.png" alt="République tchèque"> République tchèque,
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Danemark"> Danemark,
