--- a/it-activities.html
+++ b/it-activities.html
@@ -564,6 +564,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> Austria,
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> Belgio,
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> Bosnia ed Erzegovina,
+             <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> Bulgaria,
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> Croazia,
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> Repubblica Ceca,
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> Danimarca,
