--- a/jp-activities.html
+++ b/jp-activities.html
@@ -1323,6 +1323,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> オーストリア、
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> ベルギー、
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> ボスニア・ヘルツェゴビナ、
+             <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> ブルガリア、
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> クロアチア、
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> チェコ、
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> デンマーク、
