--- a/kr-activities.html
+++ b/kr-activities.html
@@ -1335,6 +1335,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> 오스트리아、
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> 벨기에、
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> 보스니아 헤르체고비나、
+            <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> 불가리아、
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> 크로아티아、
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> 체코、
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> 덴마크、
