--- a/ru-activities.html
+++ b/ru-activities.html
@@ -1197,6 +1197,7 @@
             <img class="flag-icon" src="./images/wflags/at.png" alt="Austria"> Австрия,
             <img class="flag-icon" src="./images/wflags/be.png" alt="Belgium"> Бельгия,
             <img class="flag-icon" src="./images/wflags/ba.png" alt="Bosnia and Herzegovina"> Босния и Герцеговина,
+             <img class="flag-icon" src="./images/wflags/bg.png" alt="Bulgaria"> Болгария,
             <img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> Хорватия,
             <img class="flag-icon" src="./images/wflags/cz.png" alt="Czech Republic"> Чехия,
             <img class="flag-icon" src="./images/wflags/dk.png" alt="Denmark"> Дания,
