--- a/de-resume.html
+++ b/de-resume.html
@@ -361,6 +361,7 @@
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_de.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ch.png" alt="flag" style="height:16px;display:inline-block;top:3px;position:relative;">
+          <img src="images/flag_au.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
