--- a/de.html
+++ b/de.html
@@ -133,6 +133,42 @@
     }
   </style>
 
+
+  <style>
+    /* 隐藏原始 radio 按钮 */
+    input[type="radio"] {
+      display: none;
+    }
+
+    /* 默认所有内容块隐藏 */
+    #german-content,
+    #swiss-german-content,
+    #austrian-german-content {
+      display: none;
+    }
+
+    /* 当对应的 radio 被选中时，显示相关内容 */
+    #flag_de:checked~#german-content {
+      display: block;
+    }
+
+    #flag_ch:checked~#swiss-german-content {
+      display: block;
+    }
+
+    #flag_at:checked~#austrian-german-content {
+      display: block;
+    }
+
+    /* 自定义 flag 图标样式 */
+    /* label img {
+    cursor: pointer;
+    display: inline-block;
+    margin-right: 10px;
+  } */
+  </style>
+
+
   <script type="module">
     async function fetchCountries() {
       const response = await fetch('/js/countries.json');
@@ -423,8 +459,21 @@
       <h3 class="hidden-mobile">Servus! Grüezi! <small><small><small> Freunde aus <span id="location">aller Welt</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana;">
-          <img src="images/flag_de.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
-          <img src="images/flag_ch.png" alt="flag" style="height:16px;display:inline-block;top:3px;position:relative;">
+          <!-- 德国旗帜 -->
+          <img id="flag_de" src="images/flag_de.png" alt="flag"
+            style="height:23px;display:inline-block;top:7px;position:relative; cursor: pointer;" onclick="document.getElementById('german-content').style.display='block'; 
+               document.getElementById('swiss-german-content').style.display='none'; 
+               document.getElementById('wiener-german-content').style.display='none';">
+          <!-- 瑞士旗帜 -->
+          <img id="flag_ch" src="images/flag_ch.png" alt="flag"
+            style="height:16px;display:inline-block;top:3px;position:relative; cursor: pointer;" onclick="document.getElementById('swiss-german-content').style.display='block'; 
+               document.getElementById('german-content').style.display='none'; 
+               document.getElementById('wiener-german-content').style.display='none';">
+          <!-- 奥地利旗帜 -->
+          <img id="flag_at" src="images/flag_au.png" alt="flag"
+            style="height:23px;display:inline-block;top:7px;position:relative; cursor: pointer;" onclick="document.getElementById('wiener-german-content').style.display='block'; 
+               document.getElementById('german-content').style.display='none'; 
+               document.getElementById('swiss-german-content').style.display='none';">
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
@@ -538,8 +587,9 @@
 
       </p>
       <span class="display-mobile">Willkommen, Freunde aus <span id="location2">aller Welt</span> :-)</br></br></span>
-      <p align="justify">
-        Derzeit ist Dr. Hong Xu ein engagierter <strong>Forscher</strong> und <strong>Ingenieur</strong>, der sich auf
+      <p id="german-content" align="justify" style="display: block;">
+        Derzeit ist Dr. Hong Xu ein engagierter
+        <strong>Forscher</strong> und <strong>Ingenieur</strong>, der sich auf
         <strong>erneuerbare Energien</strong> und <strong>e-Power-Systeme</strong> spezialisiert hat und nach
         Effizienzexzellenz und
         Kohlenstoffneutralität in den Bereichen Energie und Verkehr strebt.
@@ -567,8 +617,7 @@
             target="_blank">UN-Nachhaltigkeitsziele</a></strong>
         (SDGs) <strong>7 </strong>(Erschwingliche Energie), <strong>9 </strong>(Industrieinnovation)
         und <strong>13 </strong>(Maßnahmen zum Klimaschutz) eingesetzt.
-
-      <p align="justify">
+        <br><br>
         Ein Gelehrter im Herzen, promovierte er in <strong>erneuerbaren Energien</strong> an
         der
         <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a></strong> in Zusammenarbeit mit dem
@@ -589,6 +638,98 @@
             Universität Cambridge</a></strong> und
         sammelte praktische Erfahrungen in einem dualen Währungs-Venture-Capital-Unternehmen und einem führenden
         Wertpapierunternehmen in China.
+      </p>
+
+
+      <p id="swiss-german-content" align="justify" style="display: none;">
+        Zurzit isch Dr. Hong Xu e engagierte <strong>Forscher</strong> und <strong>Ingenieur</strong>, wo sich uf
+        <strong>erneierbari Energie</strong> und <strong>e-Power-Systeme</strong> spezialisiere tuet und no
+        Effizienz und Cholezstoffneutralität im Bereich Energie und Vercheer sträbt.
+        I de letschte 10 Jahr het er mit multinationale Unternehmige und führende Institutione uf em eurasische
+        Kontinent zämegräbet und technologi Fortschritt i de Bereich vo <strong>e-Mobilität</strong>,
+        <strong>sauberi Energie</strong> und <strong>neui Materiale</strong> fördert, mit <strong><span
+            class="no_of_papers"></span>
+          veröffentlichte Artikle</strong> und <strong><span class="no_of_patents"></span> erteilte Patente</strong>.
+        Nebst sinere ingenieurtechnische Aktivität het er mit renommierte Organisatione zämegräbet, insbesondere
+        mit em Sankt Galle Symposium, em Salzburger Globale Seminar, CITIC Wertpapier und em Oxford Institut für
+        Energiestudie, und sich uf d’Analyse vo <strong>saubere Energieökonomie und -politik</strong> i Asie und
+        Europa konzentriert. Als proaktive Mitwirkendi an de international Entwicklig het Dr. Xu als Mitglied vo de
+        Gruppe vo Experte (GE) bi de <strong><a href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für
+            Europa</a></strong>
+        (UNECE) i Genf mitgmacht und paralleli Sitä bi de <strong><a href="https://unfccc.int/"
+            target="_blank">UN-Klimakonferenz</a></strong>
+        (UNFCCC) i Bonn gleitet. Er setzet sich für d’<strong><a href="https://sdgs.un.org/goals"
+            target="_blank">UN-Nachhaltigkeitsziel</a></strong>
+        (SDGs) <strong>7</strong> (Günstigi Energie), <strong>9</strong> (Industrieinnovation) und <strong>13</strong>
+        (Klimaschutz) i.
+        <br><br>
+        Zurzit e Forscher im Härz, het Dr. Hong Xu i <strong>erneierbare Energie</strong> promoviert, und zwar an der
+        <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Züri</a></strong> i Zämearbeit mit em
+        <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> i de Schwiiz.
+        Vorhär het er an der <strong><a href="https://tum.de" target="_blank">TU München</a></strong> e MSc i
+        Materialwisseschafte gmacht,
+        wo er Praktika bim <strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong> und bim
+        <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> i Dütschland gmacht het.
+        Si Leidenschaft für wirkigsvolli Forschung het zu langfristige Zämearbeit mit Industrieführer im Bereich
+        Wasserstoff
+        und
+        Brennstoffzelle gführt, wie z.B. mit <strong>Toyota Motor</strong> i Japan und de <strong>Freudenberg
+          Gruppe</strong>
+        i Dütschland. I siner Verfolgig vo interdisziplinäre Horizont het er e <strong>MBA</strong> vo der
+        <strong><a href="https://quantic.edu/mba" target="_blank">Quantische Schuel für Wirtschaft</a></strong> gmacht,
+        mit witerer Usbildig an der <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Wirtschaftsschuel vo
+            der
+            Universität Cambridge</a></strong>.
+        Er het praktischi Erfahrig i eme duale Währungs-Venture-Capital-Unternehme und eme führende Wertpapierunternehme
+        i
+        China gsammelt.
+      </p>
+
+
+      <p id="wiener-german-content" align="justify" style="display: none;">
+        Derzeit is da Herr Dr. Hong Xu a engagierter <strong>Forscher</strong> und <strong>Ingenieur</strong>, wo si auf
+        <strong>erneierbare Energien</strong> und <strong>e-Power-Systeme</strong> spezialisiat hot und auf Effizienz
+        und
+        Kohlenstoffneutralität im Bereich Energie und Verkehr hintreibt.
+        In de letzten 10 Johr hot a mit internationalen Firmen und führenden Institutionen am eurasischen Kontinent
+        z'sammengarbeitet und technische Fortschritt in de Bereich <strong>e-Mobilität</strong>, <strong>saubare
+          Energie</strong>
+        und <strong>neiche Materialien</strong> vatrieben, mit <strong><span class="no_of_papers"></span>
+          veröffentlichte
+          Artikeln</strong>
+        und <strong><span class="no_of_patents"></span> erteilte Patente</strong>.
+        Nebn sei ingenieursmäßigen Tätigkeiten hot a mit renommierten Organisationen wie dem Sankt Gallen Symposium, dem
+        Salzburger Globales Seminar, CITIC Wertpapier und dem Oxford Institut für Energiestudien z’sammengarbeitet.
+        Dabei hot a si auf d’Analyse von <strong>Energieökonomien und -politiken</strong> in Asien und Europa
+        konzentriert.
+        Als proaktiver Beitragender zur internationalen Entwicklung is da Herr Dr. Xu Mitglied vo da
+        Gruppe vo Experten (GE) bei da <strong><a href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für
+            Europa</a></strong>
+        (UNECE) in Genf gwesn und hot parallele Sitzungen bei da <strong><a href="https://unfccc.int/"
+            target="_blank">UN-Klimakonferenz</a></strong>
+        (UNFCCC) in Bonn gleitet. Dabei hot a si für d’<strong><a href="https://sdgs.un.org/goals"
+            target="_blank">UN-Nachhaltigkeitsziel</a></strong>
+        (SDGs) <strong>7</strong> (Leistbare Energie), <strong>9</strong> (Industrieinnovation) und <strong>13</strong>
+        (Klimaschutzmaßnahmen) eigsetzt.
+        <br><br>
+        A Forscher im Herzn, hot da Herr Dr. Xu in <strong>erneierbare Energien</strong> promoviert, und zwar an da
+        <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a></strong> in Z’sammenarbeit mit’m
+        <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> in da Schweiz.
+        Vorher hot a an da <strong><a href="https://tum.de" target="_blank">TU München</a></strong> an MSc in
+        Materialwissenschaften gmocht,
+        wo a Praktika beim <strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong> und bei
+        <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in Deutschland gmocht hot.
+        Sei Leidenschaft für wirkungsvolle Forschung hot zu langfristigen Z’sammarbeiten mit Industrieführern im Bereich
+        Wasserstoff und
+        Brennstoffzellen gführt, wia z.B. mit <strong>Toyota Motor</strong> in Japan und da <strong>Freudenberg
+          Gruppe</strong>
+        in Deutschland. In sei Such’ nach interdisziplinären Horizonten hot a an <strong>MBA</strong> an da
+        <strong><a href="https://quantic.edu/mba" target="_blank">Quantischen Schui für Wirtschaft</a></strong> gmocht,
+        so wia zusätzliche Weiterbildung an da <strong><a href="https://www.jbs.cam.ac.uk/"
+            target="_blank">Wirtschaftsschui
+            da Universität Cambridge</a></strong>.
+        Zusätzlich hot a praktische Erfahrunga in am dualen Währungs-Venture-Capital-Unternehmen und am führenden
+        Wertpapierunternehmen in China g’sammelt.
       </p>
 
       <p style="text-align:left;">
