--- a/de.html
+++ b/de.html
@@ -663,7 +663,7 @@
         (SDGs) <strong>7</strong> (Günstigi Energie), <strong>9</strong> (Industrieinnovation) und <strong>13</strong>
         (Klimaschutz) i.
         <br><br>
-        Zurzit e Forscher im Härz, het Dr. Hong Xu i <strong>erneierbare Energie</strong> promoviert, und zwar an der
+        E Forscher im Härz, het Dr. Hong Xu i <strong>erneierbare Energie</strong> promoviert, und zwar an der
         <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Züri</a></strong> i Zämearbeit mit em
         <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> i de Schwiiz.
         Vorhär het er an der <strong><a href="https://tum.de" target="_blank">TU München</a></strong> e MSc i
